--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API%&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUeSzI9I7FG8213GXqGbs1ks6Kn4WldYY&libraries=places"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Unisocks Exchange</title>
+    <title>Nakamot'Os</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
