feat: add seo data

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nakamot-Os</title>
+    <meta name="decription" content="Decentralize your breakfast" />
+    <meta name="og:title" content="Nakamot-Os" />
+    <meta name="og:image" content="/Nakmot-Os.png" />
+    <meta name="og:description" content="Decentralize your breakfast" />
+    <meta name="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nakamot-Os" />
+    <meta name="twitter:description" content="Decentralize your breakfast" />
+    <meta name="twitter:image" content="/Nakmot-Os.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
