--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,13 @@
     <title>Nakamot-Os</title>
     <meta name="decription" content="Decentralize your breakfast" />
     <meta name="og:title" content="Nakamot-Os" />
-    <meta name="og:image" content="/Nakmot-Os.png" />
+    <meta name="og:image" content="https://arweave.net/w8Vs3I-TmRIcZVNaSkxjVhtWc9ZJleCJeSRlpXEVdPM" />
     <meta name="og:description" content="Decentralize your breakfast" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Nakamot-Os" />
     <meta name="twitter:description" content="Decentralize your breakfast" />
-    <meta name="twitter:image" content="/Nakmot-Os.png" />
+    <meta name="twitter:image" content="https://arweave.net/w8Vs3I-TmRIcZVNaSkxjVhtWc9ZJleCJeSRlpXEVdPM" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
