--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nakamot-Os</title>
-    <meta name="decription" content="Decentralize your breakfast" />
-    <meta name="og:title" content="Nakamot-Os" />
-    <meta name="og:image" content="https://dc6f3glbmhyh6k5yeufl6vld5koqhlolzgy5geisk7cpa2ihtbiq.arweave.net/GLxdmWFh8H8ruCUKv1Vj6p0DrcvJsdMRElfE8GkHmFE" />
-    <meta name="og:description" content="Decentralize your breakfast" />
-    <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nakamot-Os" />
-    <meta name="twitter:description" content="Decentralize your breakfast" />
-    <meta name="twitter:image" content="https://dc6f3glbmhyh6k5yeufl6vld5koqhlolzgy5geisk7cpa2ihtbiq.arweave.net/GLxdmWFh8H8ruCUKv1Vj6p0DrcvJsdMRElfE8GkHmFE" />
+    <meta property="decription" content="Decentralize your breakfast" />
+    <meta property="og:title" content="Nakamot-Os" />
+    <meta property="og:image" content="https://dc6f3glbmhyh6k5yeufl6vld5koqhlolzgy5geisk7cpa2ihtbiq.arweave.net/GLxdmWFh8H8ruCUKv1Vj6p0DrcvJsdMRElfE8GkHmFE" />
+    <meta property="og:description" content="Decentralize your breakfast" />
+    <meta property="og:type" content="website" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Nakamot-Os" />
+    <meta property="twitter:description" content="Decentralize your breakfast" />
+    <meta property="twitter:image" content="https://dc6f3glbmhyh6k5yeufl6vld5koqhlolzgy5geisk7cpa2ihtbiq.arweave.net/GLxdmWFh8H8ruCUKv1Vj6p0DrcvJsdMRElfE8GkHmFE" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
