separate first name and last name

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <form name="redeem" netlify netlify-honeypot="beep-boop" hidden>
       <input type="text" name="beep-boop" />
-      <input type="text" name="name" />
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
       <input type="text" name="line1" />
       <input type="text" name="line2" />
       <input type="text" name="city" />
